fixed gap between hero image and header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,8 @@ header {
 }
 
 #tabs a{
-text-decoration: none;
-color: white;
+    text-decoration: none;
+    color: white;
 }
 
 #tabs a:hover{
@@ -61,8 +61,9 @@ color: white;
 
 
 #hero-image{
-    height: 400px;
-    width: 100%;    
+    height: 390px;
+    width: 100%;  
+    padding-top: 0;  
     background: url('../images/header.jpg') no-repeat center center;      
 }
 
@@ -140,7 +141,7 @@ h1{
 }
 
 .box-fish {
-    width: 33%;
+    width: 25%;
 }
 .container-fish-1 div {
     border: solid 1px black;    
@@ -253,15 +254,16 @@ input {
 @media screen and (max-width: 1200px) {
 
    .container{   
+        width: 100%;
         display: flex;
         flex-flow: row wrap;
-   }
+    }
 }
 
 @media screen and (max-width: 950px) {
 
     .container{   
-         width 75%;
+         width: 100%;
          display: flex;
          flex-flow: column wrap;
     }
